# qubox_cQEDsim

./: .gitignore  AGENTS.md  API_REFERENCE.md  CONVENTION_AUDIT.md  MULTI_AGENT_WORKFLOW_DESIGN.md  MULTI_AGENT_WORKFLOW_SURVEY.md  PHYSICS_CORRECTNESS_EVALUATION.md  README.md  README_AGENT_WORKFLOW.md  REFRACTOR_NOTES.md  SKILLS_AND_MCP_BLUEPRINT.md  SQR_BLOCK_PHASE_INTERNAL_NOTE.md  SQR_calibration.ipynb  SQR_optimization_demo.ipynb  SQR_speedlimit_multitone_gaussian.ipynb  SQR_three_gate_optimization.ipynb  analytic_verification_results.json  av_results.txt  av_results2.txt  experiment_convention_audit.ipynb  experiment_mapping.md  fridge_wiring_2.nb  landgraf_reproduction.ipynb  mkdocs.yml  one_tone_sqr_xyz_demo.ipynb  pyproject.toml  pytest.ini  pytest_final.txt  report.md  run_agent_workflow.bat  run_agent_workflow.ps1  sequential_simulation.ipynb  sqr_calibration_result.json  test_final.txt  test_output.txt  test_results.txt  test_results2.txt  test_results_full.txt  test_sync.txt  usage_examples.ipynb
.claude/: settings.local.json
agent_runs/: README.md
agent_workflow/: README.md  __init__.py  artifacts.py  backends.py  cli.py  config.json  copilot_programmatic.py  experiment_harness.py  orchestrator.py  prompts.py  simple_yaml.py  state.py  task_spec.py
benchmarks/: floquet_latest_results.json  floquet_performance_audit.md  latest_results.json  latest_results_review_20260321.json  performance_audit.md  run_floquet_benchmarks.py  run_optimal_control_benchmarks.py  run_performance_benchmarks.py  run_unitary_synthesis_optimizer_refactor_benchmark.py  test_pytest_benchmarks.py
calibrations/: sqr_SQR_3612536fc578543c448af6b973fe2fab.json  sqr_SQR_527e17733de113ecaead4876b2bcafeb.json  sqr_SQR_63e41f5495e13461bf6cb33f0e5fab82.json  sqr_SQR_789278ba62949511b06e9d76a4bb8437.json  sqr_SQR_bc8194a85a260be4c0959c6c4d8d7ae1.json  sqr_SQR_ee33d3ef052cfe2cc17ad0187a2d8771.json  sqr_sqr_demo.json
cqed_sim/: __init__.py
cqed_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: 20260321_floquet_design_note.md  (+19 more)
(+3738 files in other folders)
