[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqed-sim"
version = "0.1.0"
description = "Hardware-faithful time-domain cQED pulse simulator using QuTiP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "qutip>=5.0",
  "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-benchmark>=5.2.3",
  "hypothesis>=6.151.10",
]
jax = [
  "jax>=0.6.2",
  "jaxlib",
]
dynamiqs = [
  "jax>=0.6.2",
  "jaxlib",
  "diffrax>=0.7.2",
  "dynamiqs>=0.3.4",
]
optax = [
  "optax>=0.2.8",
  "jax>=0.6.2",
  "jaxlib",
]
gym = [
  "gymnasium>=1.2.3",
]
sb3 = [
  "gymnasium>=1.2.3",
  "stable-baselines3>=2.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cqed_sim*", "physics_and_conventions"]

